<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
    android:id="@+id/rootview"
  android:fillViewport="true">

  <RelativeLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:background="@color/all_background" >

      <LinearLayout
          android:id="@+id/header"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:background="@color/title_background"
          android:paddingBottom="5dip"
          android:paddingTop="5dip" >

          <ImageView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:paddingLeft="2dip"
              android:src="@drawable/logo" />

          <TextView
              style="@style/heading_text"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:paddingTop="10dip"
              android:text="@string/LoginActivityTitle" />
      </LinearLayout>

      <!-- Login Form -->

      <LinearLayout
          android:id="@+id/linearLayout1"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@id/header"
          android:gravity="center_vertical"
          android:orientation="vertical"
          android:paddingBottom="10dip"
          android:paddingLeft="5dip"
          android:paddingRight="5dip"
          android:paddingTop="10dip" >

          <!-- Email Label -->

          <EditText
              android:id="@+id/username"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_marginBottom="5dip"
              android:layout_marginTop="5dip"
              android:ems="10"
              android:hint="Username"
              android:singleLine="true" />
          <!-- Password Label -->

          <EditText
              android:id="@+id/password"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="5dip"
              android:hint="Password"
              android:password="true"
              android:singleLine="true" />
          <!-- Login button -->

          <TextView
              android:id="@+id/tvBranch"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_marginBottom="5dip"
              android:layout_marginTop="5dip"
              android:paddingLeft="5dip"
              android:text="@string/BranchSelect"
              android:textColor="@color/label_color" />

          <Spinner
              android:id="@+id/spBranch"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:prompt="@string/BranchSelect" />

          <Button
              android:id="@+id/btnLogin"
              style="?android:attr/buttonStyleSmall"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dip"
              android:text="@string/Login" />
      </LinearLayout>
      <!-- Login Form Ends -->

  </RelativeLayout>

</ScrollView>
